avoid overflowing the body

--- a/tests/sample/style/style.css
+++ b/tests/sample/style/style.css
@@ -17,6 +17,7 @@
 body {
     font-family: verdana;
     background-color: black;
+    overflow: hidden;
 }
 
 .js-index-view, .js-old-test-view {
